--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "@tanstack/react-query": "^5.37.1",
     "axios": "^1.6.8",
+    "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.10.0",
+    "html2canvas": "^1.4.1",
+    "http-proxy-middleware": "^3.0.0",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "uuid": "^9.0.1"
