--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/" },
-    { "source": "/api/(.*)", "destination": "https://api.foxithub.com/" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://api.foxithub.com/"
+    }
   ]
 }
