--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" },
     {
       "source": "/api/(.*)",
       "destination": "https://api.foxithub.com/"
-    }
+    },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
