--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.10.0",
     "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.0",
+    "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
